--- a/index.html
+++ b/index.html
@@ -1091,7 +1091,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="https://i.imgur.com/YX03GwU.png" alt="American Imperial College Logo">
+                    <img src="https://cdn.pixabay.com/photo/2021/10/11/04/08/university-6699377_1280.jpg" alt="American Imperial College Logo">
                     <p>Excellence in Education, Leadership for Life. American Imperial College offers premium education in Ghana from basic level to high school.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
